Fixed live section text z-index

--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ body::-webkit-scrollbar-thumb {
 
 .live__inner {
   position: relative;
-  z-index: 1000;
+  z-index: 10;
   display: flex;
   flex-direction: row;
   align-items: center;
